--- a/1.wep_attack_flow.md
+++ b/1.wep_attack_flow.md
@@ -238,9 +238,9 @@ No! they are not! they are similar but not the same. And here is why:
 
 ## 📌 Command 1 – One-Time Fake Auth
 
-```bash
-sudo aireplay-ng --fakeauth 0 -a <BSSID> -h <YOUR_MAC> wlan0mon
-```
+ ```bash
+ sudo aireplay-ng --fakeauth 0 -a <BSSID> -h <YOUR_MAC> wlan0mon
+ ```
 
 - Performs a **single fake authentication attempt** with 0ms timeout.
 - Registers your MAC with the target AP so it accepts injected packets.
@@ -250,26 +250,25 @@ sudo aireplay-ng --fakeauth 0 -a <BSSID> -h <YOUR_MAC> wlan0mon
   Authentication successful
   ```
 
-✅ Use this for **quick testing** or **simple APs**.  
-🚫 If the AP drops your session (timeout, range issues), injection will fail.
+  ✅ Use this for **quick testing** or **simple APs**.  
 
 ---
 
 ## 📌 Command 2 – Persistent Re-Auth
 
-```bash
-sudo aireplay-ng -1 3600 -q 10 -a <BSSID> wlan0mon
-```
+ ```bash
+ sudo aireplay-ng -1 3600 -q 10 -a <BSSID> wlan0mon
+ ```
 
-- `-1 3600`: re-authenticate every **3600 seconds** (1 hour).
-- `-q 10`: show status every **10 seconds**.
-- More stable for long-running injection or strict APs.
+ - `-1 3600`: re-authenticate every **3600 seconds** (1 hour).
+ - `-q 10`: show status every **10 seconds**.
+ - More stable for long-running injection or strict APs.
 
 ✅ Recommended for **OSWP labs**, **unstable links**, or **demanding routers**.
 
 ---
 
-## 🧠 TL;DR Summary
+## TL;DR Summary
 
 | Command | Type | When to Use |
 |--------|------|-------------|
@@ -278,7 +277,7 @@ sudo aireplay-ng -1 3600 -q 10 -a <BSSID> wlan0mon
 
 ---
 
-## 💡 Pro Tip
+## Pro Tip
 
 - Use **persistent fake auth** before launching `--arpreplay`.
 - If fakeauth fails:
