--- a/1.wep_attack_flow.md
+++ b/1.wep_attack_flow.md
@@ -7,8 +7,8 @@
 Let's go!
 
 ```bash
-sudo airmon-ng check kill
-sudo airmon-ng start wlan0
+⚠️ sudo airmon-ng check kill
+⚠️ sudo airmon-ng start wlan0
 ```
 
 This will enables monitor mode on `wlan0mon`.
