--- a/1.wep_attack_flow.md
+++ b/1.wep_attack_flow.md
@@ -25,8 +25,8 @@ sudo airodump-ng wlan0mon
 With this command we want to identify WEP Network and grab:
 
 - `BSSID`
-- `Channel`
-- `Associated Clients` (STATION)
+- `CHANNEL`
+- `ESSID`
 
 **REMEMBER**: Check what AP’s are active on frequency band 2,4Ghz (WEP was never designed for the 5Ghz band).
 
@@ -45,7 +45,12 @@ sudo airodump-ng -c ${channel} wlan0mon
 ```
 Note: It can take a while before a station connects. 
 
-Once you have it, grab **CHANNEL, BSSID, ESSID, and the CLIENT** we want to focus on in the attack step.
+With this command we want to identify WEP Network and grab:
+
+- `BSSID`
+- `CHANNEL`
+- `ESSID`
+- `CLIENTS` 
 
 ```bash
 channel=3
@@ -164,7 +169,7 @@ EOF
 ```
 
 ```bash
-sudo wpa_supplicant -i wlan0 -c wep.conf
+sudo wpa_supplicant -i wlan0 -c /tmp/wep.conf
 ```
 and in another terminal 
 
