--- a/2.wpa2_psk_attack_flow.md
+++ b/2.wpa2_psk_attack_flow.md
@@ -109,7 +109,7 @@ sudo airmon-ng stop wlan0mon
 ## 🔓 Crack the Password
 
 ```bash
-wordlist='/usr/share/john/password.lst'
+wordlist='rockyou.txt'
 dumpfile='dump-wpa'
 bssid='F0:9F:C2:71:22:12'
 essid='wifi-mobile'
